<resources>
    <string name="app_name">Scran Plan</string>
    <string name="action_settings">Settings</string>
    <string name="scranplan_title">Scranplan Project</string>
    <string name="nav_drawer_open">Open Nav Drawer</string>
    <string name="nav_drawer_close">Close Nav Drawer</string>
    <string name="profile_settings_button_string">profile settings</string>
    <string name="prevButton"><![CDATA[<-]]></string>
    <string name="nextButton"><![CDATA[->]]></string>
    <string name="planner_breakfast">Breakfast</string>
    <string name="planner_lunch">Lunch</string>
    <string name="planner_dinner">Dinner</string>
    <string name="post_title">Post title</string>
    <string name="enter_post_text_here">Enter post text here...</string>
    <string name="recipe">+ Recipe</string>
    <string name="review">+ Review</string>
    <string name="image">+ Image</string>
    <string name="post">Post</string>
    <string name="submit">Submit</string>

<!--    Recipe creation strings-->
    <string name="rcBasicInfo">Basic Info</string>7
    <string name="rcRecipeName">Recipe name</string>
    <string name="rcServes">Serves</string>
    <string name="rcDesc">Recipe description</string>
    <string name="rcIng">Ingredients</string>
    <string name="rcIngName">Ingredient name</string>
    <string name="rcIngMeasurement">Measurement</string>
    <string name="rcButton">+</string>
    <string name="rcAllergens">Allergens</string>
    <string name="rcEggs">Contains eggs</string>
    <string name="rcLactose">Contains lactose</string>
    <string name="rcNuts">Contains nuts</string>
    <string name="rcShellfish">Contains shellfish</string>
    <string name="rcSoya">Contains soya</string>
    <string name="rcGluten">Contains gluten</string>
    <string name="rcDiet">Diet</string>
    <string-array name="rcDiets">
        <item>Normal</item>
        <item>Pescetarian</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
    </string-array>
    <string name="rcAdditional">Additional Info</string>
    <string name="rcFridge">Keep in fridge</string>
    <string name="rcDays">days</string>
    <string name="rcFrozen">Can be frozen</string>
    <string name="rcReheat">Reheating information</string>
    <string-array name="rcFonts">
        <item>Roboto</item>
        <item>Roboto Slab</item>
    </string-array>

    <string-array name="rcFontSize">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string name="enter_message_here">Enter Message here...</string>
    <string name="send">SEND</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="public_profile">Public Profile</string>
    <string name="messenger">Messenger</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="noResultsFound">No results found!</string>
    <string name="feed"> Message Feed</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/2247696110</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deleted_user">deleted_user</string>
    <string name="new_chat">New Chat</string>
    <string name="recent_message">Recent Messages</string>

    <string-array name="goldList">
        <item>1 month</item>
        <item>3 months</item>
        <item>1 year</item>
    </string-array>
</resources>
